Fix all deprecated/etc warnings in src and test